# rtsp-client

./: CMakeLists.txt  README.md
src/client/: rtsp-client-secure.cpp  rtsp_client_tls_interaction.cpp  rtsp_client_tls_interaction.hpp
src/common/: config_struct.hpp  rtsp_parameters.conf
src/server/: rtsp_server.cpp
